# freebooter

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docker-publish.yml
freebooter/: __init__.py  __main__.py  _assets.py  _schema_types.py  file_management.py  metadata.py
freebooter/assets/: oauth2-token-schema.json
freebooter/uploaders/: common.py  youtube.py
freebooter/watchers/: __init__.py  common.py  youtube.py
src/freebooter/: __init__.py  __main__.py  _assets.py  _config.py  config.py  file_management.py  metadata.py  types.py
src/freebooter/assets/: client-secret-schema.json  config-schema.json  devices3.json  oauth2-token-schema.json
src/freebooter/middlewares/: __init__.py  collector.py  common.py  dropper.py  ffmpeg.py  ignorer.py  limiter.py  metadata.py
src/freebooter/uploaders/: __init__.py  common.py  discord_webhook.py  instagram_instagrapi.py  local.py  save_local.py  twitter_tweepy.py  youtube_dataapi.py
src/freebooter/util/: __init__.py  frozen_dict.py  loader.py  weaklist.py
src/freebooter/watchers/: __init__.py  common.py  discord_dpy.py  discord_selfcord.py  instagram_instaloader.py  instaloader.py  local.py  pusher.py  rss.py  upload_local.py  youtube_ytdl.py  ytdl_common.py
tests/: __init__.py  test_coverage.py  test_uploads.py
tests/assets/: README.md  file_example_TIFF_1MB.tiff
tests/assets/photos/: sample1.heic
tests/assets/videos/: sample-mkv-file.mkv
