[tool.poetry]
name = "freebooter"
version = "1.8.2"
description = "freebooter downloads photos & videos from the internet and uploads it onto your social media accounts."
authors = ["Parker Wahle <regulad@regulad.xyz>"]
license = "GPLv3"
readme = "README.md"
packages = [{ from = "src", include = "freebooter" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.dependencies]
python = "^3.11,<3.13"  # feedparser uses cgi which will be removed in 3.13
jsonschema = "^4.17.3"
httplib2 = "^0.21.0"
pyyaml = "^6.0"
mariadb = "^1.1.5.post3"  # weirdly no async version
yt-dlp = ">=2023.2.17"  # preferred over youtube-dl due to speed and features
feedparser = "^6.0.10"
requests = "^2.28.2"
pillow = "^9.4.0"
google-auth = {extras = ["reauth"], version = "^2.16.0"}
google-auth-oauthlib = "^1.0.0"
instagrapi = "^1.16.41"
google-api-python-client = "^2.77.0"
ffmpeg-python = "^0.2.0"
beautifulsoup4 = "^4.11.2"
pyotp = "^2.8.0"
dislog = {extras = ["speed", "sync"], version = "^2.2.1"}
moviepy = ">=1.0.3"  # unlisted dependency of instagrapi
pillow-heif = "^0.9.3"
instaloader = "^4.9.6"  # more mature than instagrapi but only supports reading
tweepy = "^4.12.1"  # more mature than stweet
tor-python-easy = "^0.1.5"
discord-py = {extras = ["speed"], version = "^2.1.1"}
jishaku = {extras = ["discordpy"], version = "^2.5.1"}
selfcord-py = {git = "https://github.com/dolfies/discord.py-self.git", rev = "renamed", extras = ["speed"]}
youtube-dl = ">=2021.12.17"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.5"
pre-commit = "^3.0.4"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
tox-gh-actions = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"

[tool.poetry.group.type.dependencies]
mypy = "^1.0.0"
google-api-python-client-stubs = "^1.15.0"
types-httplib2 = "^0.21.0.3"
types-jsonschema = "^4.17.0.4"
types-oauthlib = "^3.2.0.3"
types-pyyaml = "^6.0.12.5"
types-requests = "^2.28.11.13"
types-beautifulsoup4 = "^4.11.6.6"
types-pillow = "^9.4.0.13"

[tool.poetry.scripts]
freebooter = "freebooter.__main__:main"
freebooter_youtube = "freebooter.__main__:authorize_youtube_data_api"
freebooter_twitter = "freebooter.__main__:authorize_twitter_api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
